Correction de contraste

--- a/style.css
+++ b/style.css
@@ -797,11 +797,11 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #EFA475!important;
+    color: #373737!important;
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #c27956!important;
+    color: #373737!important;
 }
 
 .icon-dark-slate-blue {
